<resources>
    <string name="app_name">JADA</string>
    <string name="no_match">The word you are looking for was not found.</string>
    <string name="call_failed">A request to the server could not be made. Please, check your internet connection.</string>
    <string name="origin_info">ORIGIN: %s</string>
    <string name="main_fragment_small_header">Search for words in</string>
    <string name="query_hint">"Try \"эффект\", \"colonel\" or \"घर\""</string>
    <string name="definition_text">
        &lt;b>
            %1$d.
        &lt;/b>
        %2$s
    </string>
    <string name="example_text">
        &lt;b>
        Example:
        &lt;/b>
        &lt;i>
            &lt;font color=\"%1$s\">
                %2$s
            &lt;/font>
        &lt;/i>
    </string>
    <string name="change_language">Change Language</string>
    <string name="choose_a_language">Choose a language</string>
    <string name="loading">Loading…</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="clear_button_text">Clear recent searches</string>
    <string name="delete_query_button_text">Delete Query</string>
    <string name="no_recent_searches_found">No recent searches to show</string>
    <string name="search">Find Definition</string>
    <string name="delete_confirmation_title">Clear recent searches?</string>
    <string name="delete_confirmation_message">This will clear all your recent searches.</string>
    <string name="positive_text">Yes</string>
    <string name="negative_text">No</string>
</resources>
