<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimarySurface"
    android:fitsSystemWindows="true">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/standard_margin_padding"
        android:layout_marginStart="@dimen/medium_margin_padding"
        android:text="@string/main_fragment_small_header"
        android:textAppearance="?attr/textAppearanceHeadline7"
        android:textColor="?attr/colorOnPrimarySurfaceVariant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/current_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceHeadline4"
        android:textColor="?attr/colorOnPrimarySurface"
        app:layout_constraintEnd_toEndOf="@id/title_text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/title_text"
        app:layout_constraintTop_toBottomOf="@id/title_text"
        tools:text="English" />

    <ImageButton
        android:id="@+id/change_language_gear_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/tiny_margin_padding"
        android:background="@drawable/circle_button_with_ripple_on_primary"
        android:contentDescription="@string/change_language"
        android:padding="3dp"
        app:layout_constraintBottom_toBottomOf="@id/current_language"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/current_language"
        app:layout_constraintTop_toTopOf="@id/current_language"
        app:srcCompat="@drawable/ic_settings_gear" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_view"
        android:layout_width="0dp"
        android:layout_height="@dimen/search_view_width"
        android:layout_marginStart="@dimen/medium_margin_padding"
        android:layout_marginEnd="@dimen/medium_margin_padding"
        android:background="@drawable/rounded_corners_rectangle"
        app:iconifiedByDefault="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/current_language"
        app:layout_constraintVertical_bias="0.02"
        app:queryBackground="@android:color/transparent"
        app:queryHint="@string/query_hint" />

    <TextView
        android:id="@+id/recent_searches_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin_padding"
        android:layout_marginTop="4dp"
        android:text="@string/recent_searches"
        android:textAppearance="?attr/textAppearanceHeadline7"
        android:textColor="?attr/colorOnPrimarySurface"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_view"
        app:layout_constraintVertical_bias="0.050000012" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/queries_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/medium_margin_padding"
        android:background="@drawable/top_corners_rounded_rectangle"
        android:clipToPadding="false"
        android:paddingHorizontal="@dimen/medium_margin_padding"
        android:paddingBottom="@dimen/medium_margin_padding"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recent_searches_title"
        app:layout_constraintVertical_bias="1.0"
        tools:listitem="@layout/query_layout" />

    <TextView
        android:id="@+id/no_recent_queries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/standard_margin_padding"
        android:text="@string/no_recent_searches_found"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        android:textColor="?attr/colorPrimaryVariant"
        app:layout_constraintBottom_toBottomOf="@id/queries_recycler_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/queries_recycler_view"
        tools:visibility="visible" />

    <ImageButton
        android:id="@+id/clear_all_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/medium_margin_padding"
        android:background="@drawable/circle_button_with_ripple_on_primary"
        android:contentDescription="@string/clear_button_text"
        android:padding="@dimen/tiny_margin_padding"
        app:layout_constraintBottom_toBottomOf="@id/recent_searches_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/recent_searches_title"
        app:layout_constraintTop_toTopOf="@id/recent_searches_title"
        app:srcCompat="@drawable/ic_clear_button" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="12dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
